--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,20 @@
 
     <main>
         <h1> Galeria</h1>
-        <section class="item-fixed"> 
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="./img/IMG_20220801_084249232_1.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="./img/IMG_20220801_084846477_2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="./img/IMG_20220804_193559179_3.jpg" alt="Third slide">
+              </div>
+            </div>
+          </div>
+        <!--<section class="item-fixed"> 
             <div>
 
                  <img src="./img/ligov1.png" alt="">
@@ -57,7 +70,7 @@
                     <img src="./img/IMG_20220811_182514446_MP.jpg" width="200" height="200" alt="">
                 </div>
                 
-            </div>
+            </div> -->
 
         </section>
 
