cardsbootstrap en tienda

--- a/contacto.html
+++ b/contacto.html
@@ -50,6 +50,6 @@
         <p> Copy 2022</p>
 
     </footer>
-    
+<script src="./css/js/bootstrap.bundle.min.js.map"></script>   
 </body>
 </html>
