--- a/tienda.html
+++ b/tienda.html
@@ -38,7 +38,8 @@
 
      <div class="gridtiendaitem">
 
-        <div>
+    
+        <!-- <div>
             <img src="./img/kettebell.jpg" width="200" height="200" alt=""> consultar precio
         </div> 
          <div>
@@ -48,6 +49,31 @@
             <img src="./img/images.jpg" width="200" height="200" alt="">consultar precio
          </div>
 
+        </div>-->
+
+        <div class="card" style="width: 18rem;">
+            <img src="./img/descarga.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">TRX TRINER</h5>
+              <p class="card-text">Trx trainer es el gadget que no te puede faltar en tu mochila.</p>
+              <a href="#" class="btn btn-primary">Compralo Ya</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./img/images.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Speed Rope</h5>
+              <p class="card-text">Speed rope es otro gadget para poder hacer tu aerobico en cualquier lugar</p>
+              <a href="#" class="btn btn-primary">Compralo ya</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./img/images (1).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">KETTLEBELL</h5>
+              <p class="card-text">Indispensable uno de los elementos mas versatiles a la hora de tener poco espacio para guardar y entrenar</p>
+              <a href="#" class="btn btn-primary">Compralo ya</a>
+            </div>
         </div>
 
     </div>
