--- a/galeria.html
+++ b/galeria.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
-   
+    <link rel="stylesheet" href="./css/bootstrap.min.css.map">
+
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="./css/js/bootstrap.bundle.min.js.map"
-    >
 </head>
 <body>
     <header class="encabezado">
@@ -27,6 +26,20 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
+                <img class="d-block w-100" src="..." alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+              </div>
+            </div>
+          </div>
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
                 <img class="d-block w-100" src="./img/IMG_20220801_084249232_1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
@@ -36,6 +49,14 @@
                 <img class="d-block w-100" src="./img/IMG_20220804_193559179_3.jpg" alt="Third slide">
               </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         <!--<section class="item-fixed"> 
             <div>
@@ -70,9 +91,9 @@
                     <img src="./img/IMG_20220811_182514446_MP.jpg" width="200" height="200" alt="">
                 </div>
                 
-            </div> -->
+            </div> 
 
-        </section>
+        </section> -->
 
     </main>
 
@@ -81,6 +102,6 @@
         <p> Copy 2022</p>
 
     </footer>
-    
+<script src="./css/js/bootstrap.bundle.min.js.map"></script> 
 </body>
 </html>
